dev/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress
  namespace: yas-dev
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: storefront-bff
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-backoffice
  namespace: yas-dev
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: backoffice-bff
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-swagger
  namespace: yas-dev
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: swagger-ui
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-internal
  namespace: yas-dev
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
          - "cluster.local/ns/yas-dev/sa/cart"
          - "cluster.local/ns/yas-dev/sa/order"
          - "cluster.local/ns/yas-dev/sa/product"
          - "cluster.local/ns/yas-dev/sa/customer"
          - "cluster.local/ns/yas-dev/sa/inventory"
          - "cluster.local/ns/yas-dev/sa/tax"
          - "cluster.local/ns/yas-dev/sa/media"
          - "cluster.local/ns/yas-dev/sa/storefront-bff"
          - "cluster.local/ns/yas-dev/sa/storefront-ui"
          - "cluster.local/ns/yas-dev/sa/backoffice-bff"
          - "cluster.local/ns/yas-dev/sa/backoffice-ui"
          - "cluster.local/ns/yas-dev/sa/sampledata"
